JS-9038: fix window not draggable when menu bar is off on Windows
Add #dragPanel drag region for Windows when both tabs and menu bar are
hidden. Adds noMenuBar body class so the drag panel only activates when
the menu bar is not visible.

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -227,6 +227,13 @@ html {
 
 	&.platformWindows {
 		&.isSingleTab:not(.isFullScreen) {
+			&.noMenuBar {
+				#dragPanel {
+					display: block; position: fixed; top: 0px; left: 0px; width: 100%; height: 52px; z-index: -1;
+					user-select: none; pointer-events: all; background: var(--color-shape-primary); -webkit-app-region: drag;
+				}
+			}
+
 			.sidebar {
 				.pageWrapper { padding-top: 8px; }
 			}
